# Droplet_prodect_transformers

./: .gitignore  centerlines.csv  requirements.txt  train_canonical_rollout_transformer.py  train_canonical_window_transformer.py  train_geometry_aware_markovian_rollout.py  train_markovian_rollout_transformer.py  visualize_attention_on_video.py
Docs/: Droplet_Dynamics_Scientific_Framework_v4.fdb_latexmk  Droplet_Dynamics_Scientific_Framework_v4.fls  Droplet_Dynamics_Scientific_Framework_v4.tex  __syntax_check_v4.aux  catastrophic_escape_phase_error_analysis.aux  catastrophic_escape_phase_error_analysis.out  catastrophic_escape_phase_error_analysis.tex
configs/: constants.py
droplet-detection-tracking/: README.md  pyproject.toml
droplet-detection-tracking/configs/: constants.py  paths.py  settings.py
droplet-detection-tracking/droplet_detection_tracking/: __init__.py  cli.py  io.py  preview.py
droplet-detection-tracking/droplet_detection_tracking/configs/: settings.py
droplet-detection-tracking/droplet_detection_tracking/detection/: __init__.py  pipeline.py
droplet-detection-tracking/droplet_detection_tracking/tracking/: __init__.py  tracker.py
droplet-detection-tracking/scripts/: compare_old_new_outputs.py  run_detection_tracking.py
droplet-detection-tracking/src/: io.py  preview.py  schema.py
droplet-detection-tracking/src/detection/: __init__.py  pipeline.py
droplet-detection-tracking/src/tracking/: __init__.py  tracker.py
geometry/: centerlines.csv
models/: canonical_rollout_transformer.py  canonical_window_transformer.py
src/: geometry.py  (+5 more)
(+53 files in other folders)
